--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -69,7 +69,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Games\RawMaterialProviderTest.cs" />
+    <Compile Include="Establishments\EstablismentTest.cs" />
+    <Compile Include="Items\RawMaterials\RawMaterialProviderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
