added basic player implementation with tests

--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -69,10 +69,12 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Boards\EdgeTest.cs" />
     <Compile Include="Boards\TileTest.cs" />
     <Compile Include="Boards\VertextTest.cs" />
     <Compile Include="Establishments\EstablismentTest.cs" />
     <Compile Include="Items\RawMaterials\RawMaterialProviderTest.cs" />
+    <Compile Include="Players\PlayerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
