--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -69,6 +69,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Boards\BoardTest.cs" />
+    <Compile Include="Boards\DefaultBoardBuilderTest.cs" />
     <Compile Include="Boards\EdgeTest.cs" />
     <Compile Include="Boards\TileTest.cs" />
     <Compile Include="Boards\VertextTest.cs" />
