--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -48,8 +48,10 @@
     <Compile Include="Boards\IBoardBuilder.cs" />
     <Compile Include="Boards\IBoardComponent.cs" />
     <Compile Include="Boards\IEdge.cs" />
+    <Compile Include="Boards\IRoad.cs" />
     <Compile Include="Boards\ITile.cs" />
     <Compile Include="Boards\IVertex.cs" />
+    <Compile Include="Boards\Road.cs" />
     <Compile Include="Boards\Tile.cs" />
     <Compile Include="Boards\Vertex.cs" />
     <Compile Include="Establishments\EstablishmentLevel.cs" />
