--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -60,10 +60,14 @@
     <Compile Include="Games\Game.cs" />
     <Compile Include="Games\IDistributer.cs" />
     <Compile Include="Games\IGame.cs" />
+    <Compile Include="Items\Die.cs" />
+    <Compile Include="Items\IDie.cs" />
+    <Compile Include="Items\IRobber.cs" />
     <Compile Include="Items\RawMaterials\RawMaterial.cs" />
     <Compile Include="Items\RawMaterials\RawMaterialProvider.cs" />
     <Compile Include="Items\RawMaterials\IRawMaterial.cs" />
     <Compile Include="Items\RawMaterials\MaterialType.cs" />
+    <Compile Include="Items\Robber.cs" />
     <Compile Include="Players\IPlayer.cs" />
     <Compile Include="Players\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
