--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -73,7 +73,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trading\Bank.cs" />
     <Compile Include="Trading\IMarket.cs" />
+    <Compile Include="Trading\ITrade.cs" />
     <Compile Include="Trading\Market.cs" />
+    <Compile Include="Trading\Trade.cs" />
+    <Compile Include="Trading\TradeState.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
