--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Players\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trading\Bank.cs" />
+    <Compile Include="Trading\IBank.cs" />
     <Compile Include="Trading\IMarket.cs" />
     <Compile Include="Trading\ITrade.cs" />
     <Compile Include="Trading\Market.cs" />
