--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -62,9 +66,13 @@
     <Compile Include="Games\Game.cs" />
     <Compile Include="Games\IDistributer.cs" />
     <Compile Include="Games\IGame.cs" />
+    <Compile Include="Games\Turns\ITurn.cs" />
+    <Compile Include="Games\Turns\States\ITurnState.cs" />
     <Compile Include="Items\Die.cs" />
+    <Compile Include="Items\IDevelopmentCard.cs" />
     <Compile Include="Items\IDie.cs" />
     <Compile Include="Items\IRobber.cs" />
+    <Compile Include="Items\Knight.cs" />
     <Compile Include="Items\RawMaterials\RawMaterial.cs" />
     <Compile Include="Items\RawMaterials\RawMaterialProvider.cs" />
     <Compile Include="Items\RawMaterials\IRawMaterial.cs" />
@@ -81,7 +89,9 @@
     <Compile Include="Trading\Trade.cs" />
     <Compile Include="Trading\TradeState.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
