started with turn statemachine (rolldicestate and some of the robber state) implemenation

--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -63,13 +63,26 @@
     <Compile Include="Establishments\EstablishmentLevel.cs" />
     <Compile Include="Establishments\Establishment.cs" />
     <Compile Include="Establishments\IEstablishment.cs" />
+    <Compile Include="Games\Turns\States\IFlowSate.cs" />
+    <Compile Include="Games\Turns\States\IStateProvider.cs" />
+    <Compile Include="Games\Turns\States\RobberDiscardState.cs" />
+    <Compile Include="Games\Turns\States\MoveRobberState.cs" />
+    <Compile Include="Games\Turns\States\RobberStealState.cs" />
+    <Compile Include="Games\Turns\States\StateProvider.cs" />
+    <Compile Include="Items\DiceRoll.cs" />
     <Compile Include="Games\Game.cs" />
     <Compile Include="Games\IDistributer.cs" />
     <Compile Include="Games\IGame.cs" />
     <Compile Include="Games\Turns\ITurn.cs" />
+    <Compile Include="Games\Turns\States\BuildState.cs" />
     <Compile Include="Games\Turns\States\ITurnState.cs" />
+    <Compile Include="Games\Turns\States\RollState.cs" />
+    <Compile Include="Games\Turns\States\StateCommand.cs" />
+    <Compile Include="Games\Turns\States\TradeState.cs" />
+    <Compile Include="Games\Turns\Turn.cs" />
     <Compile Include="Items\Die.cs" />
     <Compile Include="Items\IDevelopmentCard.cs" />
+    <Compile Include="Items\IDice.cs" />
     <Compile Include="Items\IDie.cs" />
     <Compile Include="Items\IRobber.cs" />
     <Compile Include="Items\Knight.cs" />
