--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Boards\VertextTest.cs" />
     <Compile Include="Establishments\EstablismentTest.cs" />
     <Compile Include="Games\Turns\States\MoveRobberStateTest.cs" />
+    <Compile Include="Games\Turns\States\RobberDiscardStateTest.cs" />
     <Compile Include="Games\Turns\States\RollStateTest.cs" />
     <Compile Include="Games\Turns\TurnTest.cs" />
     <Compile Include="Items\DieTest.cs" />
