--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Boards\TileTest.cs" />
     <Compile Include="Boards\VertextTest.cs" />
     <Compile Include="Establishments\EstablismentTest.cs" />
+    <Compile Include="Games\GameTest.cs" />
     <Compile Include="Games\Turns\States\BuildStateTest.cs" />
     <Compile Include="Games\Turns\States\MoveRobberStateTest.cs" />
     <Compile Include="Games\Turns\States\RobberDiscardStateTest.cs" />
