implemented turnprovider (without player ordering based on turn results)

--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Establishments\Establishment.cs" />
     <Compile Include="Establishments\IEstablishment.cs" />
     <Compile Include="Games\Turns\HighRollTurn.cs" />
+    <Compile Include="Games\Turns\IBuildTurn.cs" />
     <Compile Include="Games\Turns\IGameTurn.cs" />
     <Compile Include="Games\Turns\IHighRollTurn.cs" />
     <Compile Include="Games\Turns\ITurnFactory.cs" />
