--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Establishments\EstablishmentLevel.cs" />
     <Compile Include="Establishments\Establishment.cs" />
     <Compile Include="Establishments\IEstablishment.cs" />
+    <Compile Include="Games\Turns\BuildTurn.cs" />
     <Compile Include="Games\Turns\HighRollTurn.cs" />
     <Compile Include="Games\Turns\IBuildTurn.cs" />
     <Compile Include="Games\Turns\IGameTurn.cs" />
