--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Games\Turns\States\RobberStealState.cs" />
     <Compile Include="Games\Turns\States\StateProvider.cs" />
     <Compile Include="Games\Turns\TurnProvider.cs" />
+    <Compile Include="Items\Cards\DevelopmentCardType.cs" />
     <Compile Include="Items\DiceRoll.cs" />
     <Compile Include="Games\Game.cs" />
     <Compile Include="Games\IDistributer.cs" />
@@ -90,11 +91,10 @@
     <Compile Include="Games\Turns\States\TradeState.cs" />
     <Compile Include="Games\Turns\Turn.cs" />
     <Compile Include="Items\Die.cs" />
-    <Compile Include="Items\IDevelopmentCard.cs" />
+    <Compile Include="Items\Cards\IDevelopmentCard.cs" />
     <Compile Include="Items\IDice.cs" />
     <Compile Include="Items\IDie.cs" />
     <Compile Include="Items\IRobber.cs" />
-    <Compile Include="Items\Knight.cs" />
     <Compile Include="Items\RawMaterials\RawMaterial.cs" />
     <Compile Include="Items\RawMaterials\RawMaterialProvider.cs" />
     <Compile Include="Items\RawMaterials\IRawMaterial.cs" />
