--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Games\Turns\States\RobberStealState.cs" />
     <Compile Include="Games\Turns\States\StateProvider.cs" />
     <Compile Include="Games\Turns\TurnProvider.cs" />
+    <Compile Include="Items\Cards\DevelopmentCard.cs" />
     <Compile Include="Items\Cards\DevelopmentCardType.cs" />
     <Compile Include="Items\DiceRoll.cs" />
     <Compile Include="Games\Game.cs" />
