--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Establishments\EstablishmentLevel.cs" />
     <Compile Include="Establishments\Establishment.cs" />
     <Compile Include="Establishments\IEstablishment.cs" />
+    <Compile Include="Games\Commands\IGameCommand.cs" />
+    <Compile Include="Games\Commands\RollDiceCommand.cs" />
     <Compile Include="Games\Turns\BuildTurn.cs" />
     <Compile Include="Games\Turns\HighRollTurn.cs" />
     <Compile Include="Games\Turns\IBuildTurn.cs" />
@@ -83,9 +85,9 @@
     <Compile Include="Games\Turns\TurnProvider.cs" />
     <Compile Include="Items\Cards\DevelopmentCard.cs" />
     <Compile Include="Items\Cards\DevelopmentCardType.cs" />
+    <Compile Include="Items\Dice.cs" />
     <Compile Include="Items\DiceRoll.cs" />
     <Compile Include="Games\Game.cs" />
-    <Compile Include="Games\IDistributer.cs" />
     <Compile Include="Games\IGame.cs" />
     <Compile Include="Games\Turns\ITurn.cs" />
     <Compile Include="Games\Turns\States\BuildState.cs" />
@@ -99,6 +101,7 @@
     <Compile Include="Items\IDice.cs" />
     <Compile Include="Items\IDie.cs" />
     <Compile Include="Items\IRobber.cs" />
+    <Compile Include="Items\RawMaterials\IRawmaterialProvider.cs" />
     <Compile Include="Items\RawMaterials\RawMaterial.cs" />
     <Compile Include="Items\RawMaterials\RawMaterialProvider.cs" />
     <Compile Include="Items\RawMaterials\IRawMaterial.cs" />
