impelmented game.execute(IPlayerCommand)

--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Establishments\EstablishmentLevel.cs" />
     <Compile Include="Establishments\Establishment.cs" />
     <Compile Include="Establishments\IEstablishment.cs" />
-    <Compile Include="Games\Commands\IGameCommand.cs" />
+    <Compile Include="Games\Commands\IPlayerCommand.cs" />
     <Compile Include="Games\Commands\RollDiceCommand.cs" />
     <Compile Include="Games\Turns\BuildTurn.cs" />
     <Compile Include="Games\Turns\HighRollTurn.cs" />
