--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Establishments\EstablismentTest.cs" />
     <Compile Include="Games\Commands\BuildEstablishmentCommandTest.cs" />
     <Compile Include="Games\Commands\BuildRoadCommandTest.cs" />
+    <Compile Include="Games\Commands\MoveRobberCommandTest.cs" />
     <Compile Include="Games\Commands\RollDiceCommandTest.cs" />
     <Compile Include="Games\Commands\UpgradeEstablishmentCommandTest.cs" />
     <Compile Include="Games\GameTest.cs" />
