--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Games\Commands\AcceptTradeCommandTest.cs" />
     <Compile Include="Games\Commands\BuildEstablishmentCommandTest.cs" />
     <Compile Include="Games\Commands\BuildRoadCommandTest.cs" />
+    <Compile Include="Games\Commands\CancelTradeCommandTest.cs" />
     <Compile Include="Games\Commands\MoveRobberCommandTest.cs" />
     <Compile Include="Games\Commands\OpenTradeCommandTest.cs" />
     <Compile Include="Games\Commands\PlayDevelopmentCardCommandTest.cs" />
