--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Games\Commands\BuildEstablishmentCommand.cs" />
     <Compile Include="Games\Commands\BuildRoadCommand.cs" />
     <Compile Include="Games\Commands\CancelTradeCommand.cs" />
+    <Compile Include="Games\Commands\DiscardResourcesCommand.cs" />
     <Compile Include="Games\Commands\IPlayerCommand.cs" />
     <Compile Include="Games\Commands\MoveRobberCommand.cs" />
+    <Compile Include="Games\Commands\NextStateCommand.cs" />
     <Compile Include="Games\Commands\OpenTradeCommand.cs" />
     <Compile Include="Games\Commands\PlayDevelopmentCardCommand.cs" />
     <Compile Include="Games\Commands\RollDiceCommand.cs" />
