--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Games\Commands\CancelTradeCommand.cs" />
     <Compile Include="Games\Commands\DiscardResourcesCommand.cs" />
     <Compile Include="Games\Commands\IPlayerCommand.cs" />
+    <Compile Include="Games\Commands\MonopolyCommand.cs" />
     <Compile Include="Games\Commands\MoveRobberCommand.cs" />
     <Compile Include="Games\Commands\NextStateCommand.cs" />
     <Compile Include="Games\Commands\OpenTradeCommand.cs" />
