--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Boards\VertextTest.cs" />
     <Compile Include="Establishments\EstablismentTest.cs" />
     <Compile Include="Games\Commands\AcceptTradeCommandTest.cs" />
+    <Compile Include="Games\Commands\BuildDevelopmentRoadCommandTest.cs" />
     <Compile Include="Games\Commands\BuildEstablishmentCommandTest.cs" />
     <Compile Include="Games\Commands\BuildRoadCommandTest.cs" />
     <Compile Include="Games\Commands\CancelTradeCommandTest.cs" />
