--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Games\Commands\RollDiceCommand.cs" />
     <Compile Include="Games\Commands\StealResourceCommand.cs" />
     <Compile Include="Games\Commands\UpgradeEstablishmentCommand.cs" />
+    <Compile Include="Games\Commands\YearOfPlentyCommand.cs" />
     <Compile Include="Games\Turns\BuildTurn.cs" />
     <Compile Include="Games\Turns\HighRollTurn.cs" />
     <Compile Include="Games\Turns\IBuildTurn.cs" />
