--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Games\Commands\RollDiceCommandTest.cs" />
     <Compile Include="Games\Commands\StealResourceCommandTest.cs" />
     <Compile Include="Games\Commands\UpgradeEstablishmentCommandTest.cs" />
+    <Compile Include="Games\Commands\YearOfPlentyCommandTest.cs" />
     <Compile Include="Games\GameTest.cs" />
     <Compile Include="Games\Turns\BuildTurnTest.cs" />
     <Compile Include="Games\Turns\HighRollTurnTest.cs" />
