--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
@@ -79,6 +83,7 @@
     <Compile Include="Games\Commands\StealResourceCommand.cs" />
     <Compile Include="Games\Commands\UpgradeEstablishmentCommand.cs" />
     <Compile Include="Games\Commands\YearOfPlentyCommand.cs" />
+    <Compile Include="Games\GameFactory.cs" />
     <Compile Include="Games\Turns\BuildTurn.cs" />
     <Compile Include="Games\Turns\HighRollTurn.cs" />
     <Compile Include="Games\Turns\IBuildTurn.cs" />
@@ -96,6 +101,7 @@
     <Compile Include="Games\Turns\States\RobberStealState.cs" />
     <Compile Include="Games\Turns\States\StateProvider.cs" />
     <Compile Include="Games\Turns\States\YearOfPlentyState.cs" />
+    <Compile Include="Games\Turns\TurnFactory.cs" />
     <Compile Include="Games\Turns\TurnProvider.cs" />
     <Compile Include="Items\Cards\DevelopmentCard.cs" />
     <Compile Include="Items\Cards\DevelopmentCardDeck.cs" />
