--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Games\Commands\BuildRoadCommand.cs" />
     <Compile Include="Games\Commands\CancelTradeCommand.cs" />
     <Compile Include="Games\Commands\DiscardResourcesCommand.cs" />
+    <Compile Include="Games\Commands\HighRollCommand.cs" />
     <Compile Include="Games\Commands\IPlayerCommand.cs" />
     <Compile Include="Games\Commands\MonopolyCommand.cs" />
     <Compile Include="Games\Commands\MoveRobberCommand.cs" />
