--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Games\Commands\BuildRoadCommandTest.cs" />
     <Compile Include="Games\Commands\CancelTradeCommandTest.cs" />
     <Compile Include="Games\Commands\DiscardResourcesCommandTest.cs" />
+    <Compile Include="Games\Commands\HighRollCommandTest.cs" />
     <Compile Include="Games\Commands\MonopolyCommandTest.cs" />
     <Compile Include="Games\Commands\MoveRobberCommandTest.cs" />
     <Compile Include="Games\Commands\NextStateCommandTest.cs" />
