implemented BuyDevelopmentCardCommand and Game.BuyDevelopmentCard

--- a/src/VOC.Core/VOC.Core.csproj
+++ b/src/VOC.Core/VOC.Core.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Games\Commands\BuildDevelopmentRoadCommand.cs" />
     <Compile Include="Games\Commands\BuildEstablishmentCommand.cs" />
     <Compile Include="Games\Commands\BuildRoadCommand.cs" />
+    <Compile Include="Games\Commands\BuyDevelopmentCard.cs" />
     <Compile Include="Games\Commands\CancelTradeCommand.cs" />
     <Compile Include="Games\Commands\CommandFactory.cs" />
     <Compile Include="Games\Commands\DiscardResourcesCommand.cs" />
