--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Games\Commands\BuildEstablishmentCommandTest.cs" />
     <Compile Include="Games\Commands\BuildRoadCommandTest.cs" />
     <Compile Include="Games\Commands\BuyDevelopmentCardCommandTest.cs" />
+    <Compile Include="Games\Commands\BuyResourceCommandTest.cs" />
     <Compile Include="Games\Commands\CancelTradeCommandTest.cs" />
     <Compile Include="Games\Commands\DiscardResourcesCommandTest.cs" />
     <Compile Include="Games\Commands\HighRollCommandTest.cs" />
