--- a/test/VOC.Core.Test/VOC.Core.Test.csproj
+++ b/test/VOC.Core.Test/VOC.Core.Test.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Games\Turns\States\YearOfPlentyStateTest.cs" />
     <Compile Include="Games\Turns\TurnProviderTest.cs" />
     <Compile Include="Games\Turns\TurnTest.cs" />
+    <Compile Include="Items\Achievements\BiggestArmyTest.cs" />
     <Compile Include="Items\Cards\DevelopmentCardTest.cs" />
     <Compile Include="Items\DieTest.cs" />
     <Compile Include="Items\RawMaterials\RawMaterialProviderTest.cs" />
